busca por nome e config para teste local

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,9 +2,9 @@ spring:
   application:
     name: store-instituicao
   datasource:
-    url: ${DATABASE_URL:jdbc:postgresql://localhost:5432/store}
-    username: ${DATABASE_USERNAME:store}
-    password: ${DATABASE_PASSWORD:store}
+    url: jdbc:postgresql://store-db-store:5432/store
+    username: store
+    password: store
     driver-class-name: org.postgresql.Driver
   flyway:
     baseline-on-migrate: true
@@ -26,7 +26,7 @@ eureka:
     register-with-eureka: true
     fetch-registry: true
     service-url:
-      defaultZone: ${EUREKA_URI:http://localhost:8761/eureka/}
+      defaultZone: http://store-discovery:8761/eureka/
 
 springdoc:
   api-docs:
