--- a/pom.xml
+++ b/pom.xml
@@ -31,11 +31,11 @@
 			<artifactId>flyway-core</artifactId>
 		</dependency>
 		
-		<!-- <dependency>
+		<dependency>
 			<groupId>insper.store</groupId>
 			<artifactId>account</artifactId>
 			<version>${project.version}</version>
-		</dependency> -->
+		</dependency>
 
 		<dependency>
 			<groupId>insper.store</groupId>
