--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -13,6 +13,11 @@ spring:
     properties:
       hibernate:
         default_schema: instituicao
+  cache: 
+    type: redis
+  redis:
+    host: 127.0.0.1
+    port: 6379
 
 management:
   endpoints:
